# tictoc

./: .env  Cargo.toml  docker-compose.yml  flake.nix
.github/workflows/: ci.yml
.sqlx/: query-264bdcfd181149f7fffc543cdfa6a23807b3501e5810c3979e630750bb5a5b2a.json  query-35bbad65b376df91d6d29782f3e39698a5ba1665b2a9874615f97701707b48ae.json
migrations/: 20250303220950_create_users.sql
src/: main.rs
